2007-10-23  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-utilities.c:
        (nautilus_compute_title_for_location):
	Make this use only display name.
	
        * libnautilus-private/nautilus-icon-info.c:
        (nautilus_icon_info_lookup):
	Don't free filename before use
	
        * libnautilus-private/nautilus-search-directory-file.[ch]:
        * libnautilus-private/nautilus-search-directory.c:
	Create nice display name for search directories, and keep it updated.
	
        * src/nautilus-window-manage-views.c:
	Fix wrong type of argument passed to signal

2007-10-23  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.c:
	Replace some gnome vfs calls

2007-10-23  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-metafile.c:
	Use new gio uri escape functions instead of gnome-vfs

2007-10-22  Alexander Larsson  <alexl@redhat.com>

        * src/nautilus-location-entry.c:
	Use GFilenameCompleter

2007-10-22  Alexander Larsson  <alexl@redhat.com>

        * src/nautilus-application.c:
        * src/nautilus-information-panel.c:
        * src/nautilus-spatial-window.c:
        * src/nautilus-spatial-window.h:
        * src/nautilus-window-manage-views.c:
	Use GFile * instead of uris in some more places
	
	Patch from Paolo Borelli

2007-10-22  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-desktop-icon-file.c:
        * libnautilus-private/nautilus-file.c:
        * libnautilus-private/nautilus-saved-search-file.c:
        * libnautilus-private/nautilus-search-directory-file.c:
	Fix handling of mimetype as refstring
	Fix leak of GFile
	Code cleanups

	Patch from Paolo Borelli

2007-10-19  Paolo Borelli  <pborelli@katamail.com>

	* src/file-manager/fm-icon-view.c:
	* src/file-manager/fm-directory-view.c:
	use g_content_type_equals instead of strcasecmp on the mime type.

	* src/nautilus-window-menus.c:
	Remove unneeded includes
