@@ -757,67 +757,52 @@ nautilus_get_data_file_path (const char *partial_path)
 	return NULL;
 }
 
-/**
- * < 0  invalid URI
- * == 0 no
- * > 0  yes
- **/
-static int
-test_uri_exists (const char *path)
-{
-	GnomeVFSURI *uri;
-	gboolean exists;
-
-	uri = gnome_vfs_uri_new (path);
-	if (uri == NULL) {
-		return -1;
-	} else {
-		exists = gnome_vfs_uri_exists (uri);
-		gnome_vfs_uri_unref (uri);
-
-		return exists ? 1 : 0;
-	}
-}
-
 char *
 nautilus_ensure_unique_file_name (const char *directory_uri,
 				  const char *base_name,
 				  const char *extension)
 {
-	char *path, *escaped_name;
-	int exists;
+	GFileInfo *info;
+	char *filename;
+	GFile *dir, *child;
 	int copy;
+	char *res;
 
-	escaped_name = gnome_vfs_escape_string (base_name);
+	dir = g_file_new_for_uri (directory_uri);
 
-	path = g_strdup_printf ("%s/%s%s",
-				directory_uri,
-				escaped_name,
-				extension);
-	exists = test_uri_exists (path);
+	info = g_file_query_info (dir, G_FILE_ATTRIBUTE_STD_TYPE, 0, NULL, NULL);
+	if (info == NULL) {
+		g_object_unref (dir);
+		return NULL;
+	}
+	g_object_unref (info);
 
+	filename = g_strdup_printf ("%s%s",
+				    base_name,
+				    extension);
+	child = g_file_get_child (dir, filename);
+	g_free (filename);
+	
 	copy = 1;
-	while (exists > 0) {
-		g_free (path);
-		path = g_strdup_printf ("%s/%s-%d%s",
-					directory_uri,
-					escaped_name,
-					copy,
-					extension);
-
-		exists = test_uri_exists (path);
-
+	while ((info = g_file_query_info (child, G_FILE_ATTRIBUTE_STD_TYPE, 0, NULL, NULL)) != NULL) {
+		g_object_unref (info);
+		g_object_unref (child);
+		
+		filename = g_strdup_printf ("%s-%d%s",
+					    base_name,
+					    copy,
+					    extension);
+		child = g_file_get_child (dir, filename);
+		g_free (filename);
+		
 		copy++;
 	}
 
-	g_free (escaped_name);
-
-	if (exists < 0) {
-		g_free (path);
-		path = NULL;
-	}
-
-	return path;
+	res = g_file_get_uri (child);
+	g_object_unref (child);
+	g_object_unref (dir);
+	
+	return res;
 }
 
 char *
