@@ -1,6 +1,16 @@
 2007-10-23  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-file-utilities.c:
+        (nautilus_ensure_unique_file_name):
+	Port from gnome-vfs
+	
+        * src/file-manager/fm-directory-view.c:
+        (fm_directory_view_handle_netscape_url_drop):
+	Handle missing mimetype
+
+2007-10-23  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-file-utilities.c:
         (nautilus_compute_title_for_location):
 	Make this use only display name.
 	
